--- a/main.html
+++ b/main.html
@@ -8,6 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border="1">
+		<thead>
+			<th>Roll Number</th>
+			<th>Name</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>33</td>
+				<td>Vipin chaurasia</td>
+			</tr>
+			<tr><td>41</td>
+				<td>Abhijeet dubey</td>
+				
+			</tr>
+			<tr><td>43</td>
+				<td>Neeraj Yadav</td>				
+			</tr>
+		</tbody>
+	
+		
+
+
+		
+	</table>
+		<h1>List of medias</h1>
+	<ol>
+			<li>
+				<img src="https://picsum.photos/id/123/200/300" alt="image is loaded">
+			</li>
+			<li>
+				<video controls> <source  src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+				</video>
+			</li>
+			<li>
+				<audio  controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"
+			</li>
+		</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
